# bristol-chip-experiment

./: README.md  data_generation.ipynb  pyproject.toml  setup.py
Data/: 16-11-2022_17-08_laser_sweep_powersamples_100_pm_sensitivity_1550_tunics_bare_wavelength_sweep.txt  16-11-2022_17-50_laser_sweep_powersamples_100_pm_sensitivity_1550_TUNICS_powermeter_characterisation.txt  2022-11-15_laser_sweep_powersamples100_pm_sensitivity_1550.0_test_3reps.txt  2022-11-15_laser_sweep_powersamples100_pm_sensitivity_1550000_.txt  2022-11-15_laser_sweep_test.txt  2022-11-15_laser_sweep_test_3reps.txt  2022-11-16_laser_sweep_powersamples100_pm_sensitivity_1550000_QUANTIFI_powermeter_characterisation.txt  laser_sweep_154649_154748.txt
Data/01-12-2022/: 01-12-2022_14-48_laser_sweep_samples_100_sensitivity_1550_TUNICS_1520_1580_601_angela_ring_12_chip2021.txt  01-12-2022_14-59_resonance_finding_samples_100_sensitivity_1550_TUNICS_4_angela_12.txt  01-12-2022_15-32_laser_sweep_samples_100_sensitivity_1550_TUNICS_1520_1580_601_angela_ring_11_chip2021.txt  01-12-2022_15-52_laser_sweep_samples_100_sensitivity_1550_TUNICS_1540_1545_501_angela_ring_11_chip2021.txt  01-12-2022_16-12_laser_sweep_samples_100_sensitivity_1550_TUNICS_1540_1545_501_angela_ring_11_chip2021.txt  01-12-2022_16-21_resonance_finding_samples_100_sensitivity_1550_TUNICS_3_angela_ring_11.txt  01-12-2022_16-51_resonance_finding_samples_100_sensitivity_1550_TUNICS_3_angela_ring_11.txt
core/: __init__.py  analysis.py  control.py  detector_control.ipynb  graph_plotting.ipynb  instruments.py  main.ipynb  test.py  utils.py
(+68 files in other folders)
