[tool.poetry]
name = "chip_scale_experiment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyVISA = "^1.12.0"
numpy = "^1.23.4"
seaborn = "^0.12.1"
scipy = "^1.9.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
